--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset='UTF-8'>
+    <meta http-equiv="X-UA-Compatible" content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <link rel='stylesheet' href='./assets/css/style.css'>
     <title>Code-quiz-challenge-GD</title>
 </head>
 <body>
     
-    <section class="header"></section>
-    <section class="open">
-        <div class="container"></div>
+    <section class='header'></section>
+    <section class='open'>
+        <section class='container'></section>
     </section>
-    <section class="divide"></section>
-    <section class="final"></section>
+    <section class='divide'></section>
+    <section class='final'></section>
 
-    <script src="./assets/js/script.js"></script>
+    <script src='./assets/js/script.js'></script>
 </body>
 
 </body>
