Js file updated, README file completed + deployement link

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <section id="starter-container" class="show">
         <section class="container start">
-            <h1>Coding Quiz Challenge</h1>  
-            <p>Try to answer the following  questions within the time limit. Correct answers will increase on your score with 8 points. Incorrect answers will penalize your score with 5 points  and 5 seconds on your time !</p>
+            <h1>Code Quiz Challenge</h1>  
+            <p>Try to answer the following  questions within the time limit. Correct answers will increase  your score with 8 points. Incorrect answers will penalize your score with 5 points  and 5 seconds on your time !</p>
 
             <button class="btn startend" id="start-game">Start Quiz</button>
         </section>    
